--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       transition: filter 0.5s;
     }
     /* Unique background for each tab below */
-    .section.home .bgimg { background-image: url('https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=1200&q=80'); }
-    .section.eng .bgimg { background-image: url('https://images.unsplash.com/photo-1468779060412-f5b1f0647b36?auto=format&fit=crop&w=1200&q=80'); }
-    .section.mobility .bgimg { background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80'); }
-    .section.civic .bgimg { background-image: url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1200&q=80'); }
-    .section.sports .bgimg { background-image: url('https://images.unsplash.com/photo-1461897104016-0b3b0bf1cfb6?auto=format&fit=crop&w=1200&q=80'); }
-    .section.career .bgimg { background-image: url('https://images.unsplash.com/photo-1450101499163-c8848c66eeff?auto=format&fit=crop&w=1200&q=80'); }
+          .section.home .bgimg { background-image: url('fotos/1-2.jpg'); }
+      .section.eng .bgimg { background-image: url('fotos/2.jpg'); }
+      .section.mobility .bgimg { background-image: url('fotos/3.jpg'); }
+      .section.civic .bgimg { background-image: url('fotos/4.jpg'); }
+      .section.sports .bgimg { background-image: url('fotos/5.jpg'); }
+      .section.career .bgimg { background-image: url('fotos/6.jpg'); }
 
     .tab-title {
       position: relative; z-index:4; color: #fff;
@@ -231,6 +231,7 @@
   </script>
 </body>
 </html>
+
 
 
 
