--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
       filter: blur(0.3px) brightness(0.84) saturate(1.07);
       transition: filter 0.5s;
     }
-    /* High-res Google Drive backgrounds */
+    /* Unique background for each tab using Imgur images */
     .section.home .bgimg {
-      background-image: url('https://drive.google.com/uc?id=1d3dLqkg3RlZYHkQWmO9s9m0V6mw-ehKn');
+      background-image: url('https://i.imgur.com/xl0t1Y2.jpeg');
     }
     .section.eng .bgimg {
-      background-image: url('https://drive.google.com/uc?id=1QzghwnwuXogDUnUM2kaLJ2U-xOZ4wgfC');
+      background-image: url('https://i.imgur.com/fV2lieU.jpeg');
     }
     .section.mobility .bgimg {
-      background-image: url('https://drive.google.com/uc?id=1gYe9-cu1lkes-rR9VOFiPj4dOz3Iz40s');
+      background-image: url('https://i.imgur.com/IqD8apH.jpeg');
     }
     .section.civic .bgimg {
-      background-image: url('https://drive.google.com/uc?id=1Cp1dhCsPEmR2--cPEGVj4O7XGV_wIx2-');
+      background-image: url('https://i.imgur.com/XkhkH2R.jpeg');
     }
     .section.sports .bgimg {
-      background-image: url('https://drive.google.com/uc?id=1LOKnhQ9KkBTRsepalQWn4DWdV9-cSJPz');
+      background-image: url('https://i.imgur.com/pEW0AAI.jpeg');
     }
     .section.career .bgimg {
-      background-image: url('https://drive.google.com/uc?id=144o9Rh4wv_fTv9cZ5F6hoZ7CPKiU2xmf');
+      background-image: url('https://i.imgur.com/hs9p7lW.jpeg');
     }
 
     .tab-title {
@@ -237,6 +237,7 @@
   </script>
 </body>
 </html>
+
 
 
 
